fix:Make small spacing changes

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ footer {
 }
 
 .presentation-main * {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .blue-button {
@@ -111,12 +111,12 @@ footer {
     display: flex;
     justify-content: center;
     list-style: none;
-    gap: 40px;
+    gap: 70px;
     margin-bottom: 100px;
 }
 
 .card {
-    width: 150px;
+    width: 160px;
     text-align: center;
     color: rgb(88, 88, 88);
 }
@@ -125,8 +125,8 @@ footer {
     display: block;
     border: 4px solid #3882F6;
     border-radius: 8px;
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
     margin-bottom: 10px;
 }
 
@@ -165,6 +165,7 @@ footer {
     background-color: #3882F6;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: #F9FAF8;
 }
 
